sumo/tests/netconvert/import/XML/errors/xml_false_nod/options.netconvert
--xml-edge-files=input_edges.edg.xml --xml-node-files=hokkaido.nod.xml --output-file=output/net.net.xml
